# wikist

./: .gitignore  Cargo.toml  LICENSE  README.md  example.env
migrations/2020-07-21-152626_add_articles/: down.sql  up.sql
migrations/2020-07-21-152626_add_tables/: down.sql  up.sql
migrations/2020-07-21-152626_create_articles/: up.sql
migrations/2020-08-14-174806_add_users/: up.sql
migrations/2020-08-15-173017_add_authentications/: down.sql  up.sql
src/: auth.rs  db.rs  lib.rs  main.rs  schema.rs
src/db/: models.rs  schema.rs
src/extractors/: connection_info.rs  db_connection.rs  mod.rs  query.rs  user_info.rs
src/middlewares/: connection_info.rs  db_connection.rs  mod.rs
src/models/: actor.rs  article.rs  article_search.rs  mod.rs  namespace.rs  permission.rs  redirection.rs  revision.rs  role.rs  user.rs
src/parser/: headings.rs  mod.rs
src/renderer/: bold_italic.rs  heading.rs  hr.rs  link.rs  list.rs  mod.rs  paragraph.rs  paragraph_break.rs  preformatted.rs  table.rs  template.rs
src/routes/: articles.rs  auth.rs  mod.rs
