[package]
name = "wikist"
version = "0.1.0"
authors = ["nessun"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.7.1"
actix-web = "2.0"
actix-rt = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }
r2d2 = "0.8"
dotenv = "0.15.0"
anyhow = { version = "1.0" }
parse_wiki_text = "0.1.5"